tests/neg/type_error4.scala
class Main {
  def plus(a: Int, b: Int): Int = 0.0

  def main = {
    0
  }
}